adding user service implementations and stub for authentication
